--- a/source/dialogs/zone-properties/zone-properties-modal.html
+++ b/source/dialogs/zone-properties/zone-properties-modal.html
@@ -3,7 +3,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked();" aria-hidden="true">&times;</button>
-                <h4 class="modal-title">Zone Track Properties</h4>
+                <h4 class="modal-title">Zone Properties</h4>
             </div>
             <div class="modal-body padding-0">
                 <form action="" class="form-horizontal">
@@ -58,8 +58,8 @@
                         <div id="zone-label">
                             <h5>Zone Label</h5>
                             <div class="form-group">
-                                <label for="isShowName" class="control-label col-sm-12 normal-text">
-                                    <input type="checkbox" class="form-control wi-form-control" id="isShowName" ng-model="wiModal.showName">Show Name
+                                <label for="isShowName" class="col-sm-12 normal-text">
+                                    <input type="checkbox" id="isShowName" ng-model="wiModal.showName">Show Name
                                 </label>
                             </div>
                             <div class="form-group">
