update zone track & zone

--- a/source/dialogs/zone-properties/zone-properties-modal.html
+++ b/source/dialogs/zone-properties/zone-properties-modal.html
@@ -43,13 +43,13 @@
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label class="control-label col-sm-4 small-text">Foreground</label>
+                                <label class="control-label col-sm-4 normal-text">Foreground</label>
                                 <div class="col-sm-8 text-left">
                                     <button ng-click="wiModal.foreground()" ng-style="{'background-color':wiModal.fill.pattern.foreground}" class="form-control wi-form-control width-80px thick-border"></button>
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label class="control-label col-sm-4 small-text">Background</label>
+                                <label class="control-label col-sm-4 normal-text">Background</label>
                                 <div class="col-sm-8 text-left">
                                     <button ng-click="wiModal.background()" ng-style="{'background-color':wiModal.fill.pattern.background}" class="form-control wi-form-control width-80px thick-border"></button>
                                 </div>
