--- a/source/dialogs/histogram-format/histogram-format-modal.html
+++ b/source/dialogs/histogram-format/histogram-format-modal.html
@@ -22,11 +22,13 @@
                                             <div class='form-group'>
                                                 <label class="col-sm-3">Top(m)</label>
                                                 <div class="col-sm-3">
-                                                    <input class="form-control wi-form-control" type="number" ng-model="wiModal.histogramProps.intervalDepthTop" ng-disabled="!(wiModal.depthType=='intervalDepth')" required>
+                                                    <input class="form-control wi-form-control" type="number" ng-model="wiModal.histogramProps.intervalDepthTop" ng-disabled="!(wiModal.depthType=='intervalDepth')"
+                                                        required min="0">
                                                 </div>
                                                 <label class="col-sm-3">Bottom(m)</label>
                                                 <div class="col-sm-3">
-                                                    <input class="form-control wi-form-control" type="number" ng-model="wiModal.histogramProps.intervalDepthBottom" ng-disabled="!(wiModal.depthType=='intervalDepth')" required>
+                                                    <input class="form-control wi-form-control" type="number" ng-model="wiModal.histogramProps.intervalDepthBottom" ng-disabled="!(wiModal.depthType=='intervalDepth')"
+                                                        required min="0">
                                                 </div>
                                             </div>
                                             <div class="form-group">
@@ -36,17 +38,14 @@
                                             <div class="form-group">
                                                 <label class="col-sm-3">Zones</label>
                                                 <div class="col-sm-3">
-                                                    <select class="form-control wi-form-control" ng-disabled="wiModal.depthType=='intervalDepth'"
-                                                    ng-model="wiModal.SelectedZone"
-                                                    ng-change="wiModal.onZoneSetChange()"
-                                                    ng-options="ZoneSet as ZoneSet.name for ZoneSet in wiModal.listZoneSet track by ZoneSet.id">
+                                                    <select class="form-control wi-form-control" ng-disabled="wiModal.depthType=='intervalDepth'" ng-model="wiModal.SelectedZone"
+                                                        ng-change="wiModal.onZoneSetChange()" ng-options="ZoneSet as ZoneSet.name for ZoneSet in wiModal.listZoneSet track by ZoneSet.id">
                                                     </select>
                                                 </div>
                                                 <label class="col-sm-3">Active Zones</label>
                                                 <div class="col-sm-3">
-                                                    <select class="form-control wi-form-control" ng-disabled="wiModal.depthType=='intervalDepth'"
-                                                    ng-model="wiModal.SelectedActiveZone"
-                                                    ng-change="wiModal.onActiveZoneChange()">
+                                                    <select class="form-control wi-form-control" ng-disabled="wiModal.depthType=='intervalDepth'" ng-model="wiModal.SelectedActiveZone"
+                                                        ng-change="wiModal.onActiveZoneChange()">
                                                         <option value="All" ng-selected="wiModal.histogramProps.activeZone=='All'">All</option>
                                                         <option value="{{Zone.idZone}}" ng-repeat="Zone in wiModal.listZoneSet[wiModal.SelectedZone.id].zones"
                                                         ng-selected="wiModal.histogramProps.activeZone==Zone.idZone">
@@ -63,10 +62,7 @@
                                             <div class='form-group'>
                                                 <label class="col-sm-3">Curve name</label>
                                                 <div class="col-sm-3">
-                                                    <select class="form-control wi-form-control"
-                                                    ng-model="wiModal.SelectedCurve"
-                                                    ng-change="wiModal.onSelectCurveChange()"
-                                                    ng-options="curve as curve.datasetCurve for curve in wiModal.curvesArr">
+                                                    <select class="form-control wi-form-control" ng-model="wiModal.SelectedCurve" ng-change="wiModal.onSelectCurveChange()" ng-options="curve as curve.datasetCurve for curve in wiModal.curvesArr">
                                                     </select>
                                                 </div>
                                                 <label class="col-sm-3">Number of Divisions</label>
@@ -173,7 +169,9 @@
                                                         <select name="" id=""></select>
                                                     </td>
                                                     <td>
-                                                        <button></button>
+                                                        <button>
+                                                            <span class="delete-16x16"></span>
+                                                        </button>
                                                     </td>
                                                 </tr>
                                                 <tr>
@@ -203,10 +201,48 @@
                         </div>
                     </wi-tab>
                     <wi-tab heading='Options'>
-                        <div class="container-fluid">
-                            <form class='form-horizontal'>
-
-                            </form>
+                        <div class="padding-1em container-fluid">
+                            <div class="row">
+                                <form class='col-sm-12 form-horizontal form-condensed'>
+                                    <div id="histogramname">
+                                        <h5>Histogram Name</h5>
+                                        <div class="col-sm-offset-1 col-sm-11 container-fluid">
+                                            <div class="form-group">
+                                                <label class="col-sm-3">Histogram Name</label>
+                                                <div class="col-sm-3">
+                                                    <input type="text" class="form-control wi-form-control" ng-model="wiModal.histogramProps.name">
+                                                </div>
+                                                <div class="col-sm-6"></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div id="hardcopy">
+                                        <h5>Hard Copy</h5>
+                                        <div class="col-sm-offset-1 col-sm-11 container-fluid">
+                                            <div class="form-group">
+                                                <label class="col-sm-3">Width(inch)</label>
+                                                <div class="col-sm-3">
+                                                    <input type="number" ng-model="wi.histogramProps.hardCopyWidth">
+                                                </div>
+                                                <div class="col-sm-6">
+                                                    <input type="checkbox">
+                                                    <label>Plot Zone, depth and parameter i</label>
+                                                </div>
+                                            </div>
+                                            <div class="form-group">
+                                                <label class="col-sm-3">Height(inch)</label>
+                                                <div class="col-sm-3">
+                                                    <input type="number" ng-model="wiModal.histogramProps.hardCopyHeight">
+                                                </div>
+                                                <div class="col-sm-6">
+                                                    <input type="checkbox">
+                                                    <label>Plot Archive Zone Ti</label>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
                         </div>
                     </wi-tab>
                     <wi-tab heading='Refrence Window'>
@@ -220,7 +256,7 @@
             </div>
 
             <div class="modal-footer">
-                <button type="button" ng-click="wiModal.onApplyButtonClicked()" class="btn btn-default"><span class="apply-16x16"></span>&nbsp;Apply</button>
+                <button type="button" ng-click="wiModal.onCancelButtonClicked()" class="btn btn-default"><span class="close-16x16"></span>&nbsp;Cancel</button>
                 <button type="button" ng-click="wiModal.onOKButtonClicked();" class="btn btn-default"><span class="ok-16x16"></span>&nbsp;OK</button>
             </div>
         </div>
